--- a/app/src/main/res/drawable/background_logo.xml
+++ b/app/src/main/res/drawable/background_logo.xml
@@ -26,7 +26,7 @@
                 android:centerY="100%"
                 android:endColor="#00F57F17"
                 android:gradientRadius="400dp"
-                android:startColor="@color/blue_purple_700"
+                android:startColor="@color/blue_san_juan_700"
                 android:type="radial" />
         </shape>
     </item>
