--- a/app/src/main/res/layout/cell_all_passwords_groups.xml
+++ b/app/src/main/res/layout/cell_all_passwords_groups.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/materialCardView"
+    android:id="@+id/mcv_cardSearchView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
@@ -52,7 +52,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/rv_monthMovements"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
