--- a/app/src/main/res/layout/cell_day_all_movements.xml
+++ b/app/src/main/res/layout/cell_day_all_movements.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/materialCardView"
+    android:id="@+id/mcv_cardSearchView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
@@ -28,6 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:visibility="visible"
             android:id="@+id/rv_monthMovements"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
