--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -16,14 +16,12 @@
             android:id="@+id/cardViewGraphs"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:backgroundTint="@color/white_magnolia"
-            android:elevation="0dp"
-            app:cardCornerRadius="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="12dp"
+            app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/primaryColor"
-            app:strokeWidth="1dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -65,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_latestMovements"
             app:layout_constraintTop_toBottomOf="@+id/tv_latestMovements"
-            tools:itemCount="5"
+            tools:itemCount="3"
             tools:listitem="@layout/cell_movement" />
 
         <Button
@@ -78,12 +76,14 @@
             android:background="@android:color/transparent"
             android:text="@string/see_all_movements"
             android:textAllCaps="false"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/primaryColor"
             app:layout_constraintEnd_toEndOf="@+id/rv_latestMovements"
             app:layout_constraintStart_toStartOf="@+id/rv_latestMovements"
-            app:layout_constraintTop_toBottomOf="@+id/rv_latestMovements" />
+            app:layout_constraintBottom_toTopOf="@+id/ll_addMovements" />
 
         <LinearLayout
+            android:id="@+id/ll_addMovements"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -99,9 +99,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/red_bittersweet_200"
-                android:text="@string/add_expense"
+                android:text="@string/expense"
                 android:textColor="@color/white"
-                app:icon="@drawable/ic_shopping_cart_24"
+                android:textAlignment="center"
+                app:icon="@drawable/ic_add_24"
                 app:iconTint="@color/white" />
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -111,9 +112,10 @@
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/green_mantis_200"
-                android:text="@string/add_income"
+                android:text="@string/income"
+                android:textAlignment="center"
                 android:textColor="@color/white"
-                app:icon="@drawable/ic_money_24"
+                app:icon="@drawable/ic_add_24"
                 app:iconTint="@color/white" />
 
         </LinearLayout>
