--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -7,7 +7,7 @@
     tools:context=".passwords.PasswordsFragment">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView"
+        android:id="@+id/mcv_cardSearchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
@@ -38,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
+        app:layout_constraintTop_toBottomOf="@+id/mcv_cardSearchView"
         tools:itemCount="5"
         tools:listitem="@layout/cell_all_passwords_groups" />
 
