--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primaryColor">#4a75e6</color>
-    <color name="blue_light_200">#65cccc</color>
-    <color name="blue_ribbon_500">#1B4CFF</color>
-    <color name="blue_purple_700">#4501FF</color>
+    <color name="blue_fog_100">#dfe0ff</color>
+    <color name="blue_light_200">#b2b8fb</color>
+    <color name="blue_ribbon_500">#6686e6</color>
+    <color name="blue_san_juan_700">#334373</color>
     <color name="blue_cello_900">#18264A</color>
     <color name="red_bittersweet_200">#ff6b6b</color>
     <color name="red_error_500">#BF3320</color>
@@ -20,5 +21,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_magnolia">#DBDBDB</color>
     <color name="black">#FF000000</color>
+
 
 </resources>
