--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -28,7 +28,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_allMovements"
+        android:id="@+id/rv_accountsGroups"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -43,14 +43,15 @@
         tools:listitem="@layout/cell_all_passwords_groups" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btn_addGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:backgroundTint="@color/primaryColor"
         android:text="@string/group"
         android:textColor="@color/white"
         app:icon="@drawable/ic_add_24"
-        android:backgroundTint="@color/primaryColor"
         app:iconTint="@color/white"
-        android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
