--- a/app/src/main/res/layout/cell_all_passwords_groups.xml
+++ b/app/src/main/res/layout/cell_all_passwords_groups.xml
@@ -28,8 +28,8 @@
                 android:id="@+id/btn_groupTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginEnd="15dp"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:fontFamily="@font/popings_medium_500"
                 android:padding="0dp"
@@ -41,22 +41,21 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
+                android:id="@+id/btn_moreOptions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_more_option_vert_24"
                 android:background="@android:color/transparent"
-                android:id="@+id/btn_moreOptions"
                 android:padding="5dp"
-                />
+                android:src="@drawable/ic_more_option_vert_24" />
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:visibility="gone"
-            android:id="@+id/rv_monthMovements"
+            android:id="@+id/rv_accounts"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ll_headerGroup"
