--- a/app/src/main/res/layout/cell_day_all_movements.xml
+++ b/app/src/main/res/layout/cell_day_all_movements.xml
@@ -16,11 +16,12 @@
 
         <Button
             android:id="@+id/btn_monthTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:fontFamily="@font/popings_medium_500"
             android:padding="0dp"
+            android:textAlignment="textStart"
             android:text="March 2023"
             android:textColor="@color/primaryColor"
             android:textSize="15sp"
