--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -189,7 +189,7 @@
                 app:startIconTint="@color/gray_dove_500">
 
                 <EditText
-                    android:id="@+id/txt_password"
+                    android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/hint_password_"
