--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -21,7 +21,7 @@
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:iconifiedByDefault="true"
+            app:iconifiedByDefault="false"
             app:queryBackground="@android:color/transparent"
             app:queryHint="@string/hint_search" />
 
