--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/drawer_nav_menu"
+        app:headerLayout="@layout/drawer_header"
         android:layout_gravity="start" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
