--- a/app/src/main/res/layout/fragment_bars_chart.xml
+++ b/app/src/main/res/layout/fragment_bars_chart.xml
@@ -5,7 +5,7 @@
     android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
-    android:background="@color/white_magnolia"
+    android:background="@color/white"
     tools:context=".expenses.BarsChartFragment">
 
     <com.github.mikephil.charting.charts.BarChart
