--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -59,7 +59,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_latestMovements"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_seeAllMovements"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_latestMovements"
             app:layout_constraintTop_toBottomOf="@+id/tv_latestMovements"
@@ -73,22 +74,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:background="@android:color/transparent"
             android:text="@string/see_all_movements"
             android:textAllCaps="false"
-            android:layout_marginBottom="20dp"
             android:textColor="@color/primaryColor"
+            app:layout_constraintBottom_toTopOf="@+id/ll_addMovements"
             app:layout_constraintEnd_toEndOf="@+id/rv_latestMovements"
-            app:layout_constraintStart_toStartOf="@+id/rv_latestMovements"
-            app:layout_constraintBottom_toTopOf="@+id/ll_addMovements" />
+            app:layout_constraintStart_toStartOf="@+id/rv_latestMovements" />
 
         <LinearLayout
             android:id="@+id/ll_addMovements"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:clipToPadding="false"
             android:gravity="center"
             android:orientation="horizontal"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -100,8 +104,8 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/red_bittersweet_200"
                 android:text="@string/expense"
-                android:textColor="@color/white"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 app:icon="@drawable/ic_add_24"
                 app:iconTint="@color/white" />
 
