--- a/app/src/main/res/menu/drawer_nav_menu.xml
+++ b/app/src/main/res/menu/drawer_nav_menu.xml
@@ -3,17 +3,30 @@
     <item
         android:id="@+id/calendarFragment"
         android:icon="@drawable/ic_calendar_month_24"
-        android:title="@string/calendar"/>
+        android:title="@string/calendar" />
     <item
         android:id="@+id/diaryFragment"
         android:icon="@drawable/ic_book_24"
-        android:title="@string/schedule"/>
+        android:title="@string/schedule" />
     <item
         android:id="@+id/expensesFragment"
         android:icon="@drawable/ic_money_24"
-        android:title="@string/expenses_manager"/>
+        android:title="@string/expenses_manager" />
     <item
         android:id="@+id/passwordsFragment"
         android:icon="@drawable/ic_password_24"
-        android:title="@string/passwords_manager"/>
+        android:title="@string/passwords_manager" />
+
+    <item android:title="@string/management_settings">
+        <menu>
+            <item
+                android:id="@+id/accountFragment"
+                android:icon="@drawable/ic_account_circle_24"
+                android:title="@string/account" />
+            <item
+                android:id="@+id/helpFragment"
+                android:icon="@drawable/ic_help_24"
+                android:title="@string/help_faqs" />
+        </menu>
+    </item>
 </menu>
