--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -61,4 +61,23 @@
         android:name="com.miguelrodriguez19.mindmaster.expenses.AllMovementsFragment"
         android:label="@string/all_movements"
         tools:layout="@layout/fragment_all_movements" />
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.miguelrodriguez19.mindmaster.settings.AccountFragment"
+        android:label="@string/account"
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/helpFragment"
+        android:name="com.miguelrodriguez19.mindmaster.settings.HelpFragment"
+        android:label="@string/help_faqs"
+        tools:layout="@layout/fragment_help" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.miguelrodriguez19.mindmaster.settings.SettingsFragment"
+        android:label="@string/settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
