--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primaryColor">#4a75e6</color>
     <color name="blue_fog_100">#dfe0ff</color>
     <color name="blue_light_200">#b2b8fb</color>
+    <color name="blue_primary_light_200">#9CB1E8</color>
     <color name="blue_ribbon_500">#6686e6</color>
     <color name="blue_san_juan_700">#334373</color>
     <color name="blue_cello_900">#18264A</color>
